<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NHBooks</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="item_home">Home</string>
    <string name="item_tag">Tags</string>
    <string name="item_character">Characters</string>

    <string name="title_page_latest">Latest</string>
    <string name="title_page_download">Saved books</string>
    <string name="title_page_favorite">Favorites</string>
    <string-array name="page_titles">
        <item>@string/title_page_latest</item>
        <item>@string/title_page_download</item>
        <item>@string/title_page_favorite</item>
    </string-array>
    <string name="tips_network_error">Failed to connect to NHentai.</string>
    <string name="snack_action_try_again">Try again</string>

    <string name="activity_details">Details</string>
    <string name="tag_type_tag">Tags: </string>
    <string name="tag_type_parodies">Parodies: </string>
    <string name="tag_type_language">Language: </string>
    <string name="tag_type_characters">Characters: </string>
    <string name="tag_type_artists">Artists: </string>
    <string name="tag_type_group">Groups: </string>
    <string name="tag_type_upload_time">Uploaded time: </string>

    <string name="activity_gallery">Gallery</string>

    <string name="activity_search_result">Search result</string>
    <string name="title_search_result">Search result: %s</string>
    <string name="tips_no_result">No result.</string>

    <string name="settings_main">Settings</string>
    <string name="category_about">About</string>
    <string name="set_title_app_version">Application version</string>
    <string name="settings_license">Licenses</string>
    <string name="set_title_weibo">Sina Weibo</string>
    <string name="set_title_weibo_summary">\@某燒餅</string>
    <string name="set_title_google_plus">Google Plus</string>
    <string name="set_title_google_plus_summary">+Fung Jichun</string>
    <string name="set_title_github">Github Repo</string>
    <string name="set_title_github_website">"https://github.com/fython/NHentai-android"</string>

</resources>
